Header changes now look correct on mobile.

--- a/css/1.css
+++ b/css/1.css
@@ -12,6 +12,9 @@ outline:none;
 	color:#FFFFFF;
 }
 
+
+
+
 a {
 	color:#9FF;
 }
@@ -48,6 +51,7 @@ text-decoration:none;
 	font-size: 11px;
 }
 
+
 #navigation {
 	background:#181825;
 	width:530px;
@@ -65,13 +69,6 @@ text-decoration:none;
 	padding-bottom: 12px;
 	padding-left: 0;
 	text-align: center;
-}
-
-@media max-width: 600px{
- #navigation {
-	 width: 75vw;
-	 background:#ffffff;
- }
 }
 
 #nav li {
@@ -213,6 +210,53 @@ float:right;
 .main {
 	font-size: 1.2em;
 	color: #000000;
+}
+
+
+.content {
+	width:760px;
+	margin:0 auto;
+	background:#151521;
+	padding:5px;
+	font-size: 11px;
+	border-color: #590232;
+	border-style: outset;
+}
+
+@media screen and (max-width: 600px){
+	.logo{
+		display:none;
+	}
+
+	.content {
+		width: 100vw;
+	}
+
+	#footer {
+		width: 100vw;
+	}
+
+	#container {
+		width: 100vw;
+		margin-right:0px;
+	}
+	#navigation {
+		width: 100vw;
+	}
+
+}
+
+
+#topcontainer {
+    width: 90%; /* or whatever is required */
+    text-align: center; /* ensures the image is always in the h-middle */
+    overflow: hidden; /* hide the cropped portion */
+}
+
+#topcontainer img {
+    position: relative; /* allows repositioning */
+    left: 100%; /* move the whole width of the image to the right */
+    margin-left: -200%; /* magic! */
 }
 
 .style3 {font-size: 185%}
