--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,5 @@
 
-.mainbody {
-	background:url(../images/body.jpg) top repeat-x #050507;
-	font:70% Verdana;
-	color:#FFFFFF;
-}
 
-a {
-	color:#9FF;
-}
-
-a:hover {
-	text-decoration: none;
-	text-align: center;
-}
-
-@media screen and (max-width: 600px){
-	.logo{
-		display:none;
-	}
-}
-
-h1.main_title {
-font:170% Century Gothic;
-color:#fff;
-font-weight:bold;
-margin:20px auto 0;
-text-align:center;
-}
-
-h1.main_title a {
-color:#fff;
-text-decoration:none;
-}
-
-.content {
-	width:760px;
-	margin:0 auto;
-	background:#151521;
-	padding:5px;
-	font-size: 11px;
-	border-color: #590232;
-	border-style: outset;
-}
 
 .navbar-nav {
     float:none;
@@ -73,138 +31,14 @@ text-decoration:none;
 
 }
 
-
-#nav a {
-padding:12px;
-color:#ACACB0;
-text-decoration:none;
-margin-right:0px;
+#topcontainer {
+    width: 90%; /* or whatever is required */
+    text-align: center; /* ensures the image is always in the h-middle */
+    overflow: hidden; /* hide the cropped portion */
 }
 
-#nav a:hover {
-background:url(../images/nav_link_active.jpg) top repeat-x;
-color:#fff;
+#topcontainer img {
+    position: relative; /* allows repositioning */
+    left: 100%; /* move the whole width of the image to the right */
+    margin-left: -200%; /* magic! */
 }
-
-#nav a.active {
-background:url(../images/nav_link_active.jpg) top repeat-x;
-color:#fff;
-font-weight:bold;
-}
-
-
-
-#inner_container {
-background:url(../images/inner_container.jpg) top repeat-x #181824;
-padding:10px 10px 10px 25px;
-}
-
-#sidebar {
-	width:200px;
-	padding:10px;
-	float:right;
-	color:#bdbdc1;
-	background-color: #181825;
-	border: 2 px;
-	font-size: 14px;
-}
-
-#container #sidebar h2 {
-font-size:90%;
-margin:10px 0;
-}
-
-#container #sidebar p {
-text-indent:0;
-font-size:90%;
-line-height:17px;
-}
-
-#content {
-margin-right:240px;
-}
-
-blockquote {
-background:url(../images/quote.gif) bottom right no-repeat #292935;
-padding:2px 17px;
-}
-
-p {
-margin:10px 0;
-padding:5px;
-line-height:20px;
-text-indent:25px;
-}
-
-p.note {
-padding:20px;
-background:#2D2D44;
-color:#fff;
-}
-
-#container h1 {
-font:170% Arial;
-color:#fff;
-margin:15px 0;
-}
-
-#container h2 {
-font:110% Verdana;
-color:#fff;
-font-weight:bold;
-margin:2px 0 15px;
-}
-
-#container ul {
-margin:10px 15px;
-}
-
-#container ul li {
-margin:10px 0;
-}
-
-#container img {
-background:#070713;
-padding:5px;
-}
-
-#footer {
-width:750px;
-background:#151521;
-padding:10px;
-margin:0 auto;
-clear:both;
-}
-
-#content table {
-width:475px;
-background:#1E1E2D;
-margin:25px 0;
-}
-
-td {
-	padding: 8px;
-	text-align: left;
-	background: url(../images/td.jpg) top left no-repeat #1E1E2D;
-	font: 100% Georgia;
-}
-
-th {
-color:#fff;
-padding:10px;
-}
-
-#footer p {
-text-indent:0;
-}
-
-#footer p.validate {
-float:right;
-}
-
-.style3 {font-size: 185%}
-.style10 {font-size: 12px}
-.style10 {color: #000000}
-.style11 {color: #FFFFFF}
-.style12 {color: #CCCCCC}
-.style14 {font-family: Verdana, Arial, Helvetica, sans-serif; font-size: medium; font-weight: bold; }
